Fix behaviour of shadow interpolation with mismatched list lengths

For shadow properties like box-shadow and text-shadow we were
incorrectly interpolating shadow lists with mismatched lengths.

The old behaviour would repeat each list to the lowest common multiple,
the correct behaviour is to pad the shorted list with "zero" shadows.

Spec: https://www.w3.org/TR/css3-transitions/#animatable-types

This change adds the "padding" behaviour to list interpolation and
composition and updates our shadow animation test cases to match
spec behaviour.

BUG=713674

Review-Url: https://codereview.chromium.org/2844213002
Cr-Commit-Position: refs/heads/master@{#470205}

Former-commit-id: 4aaaf95a33ef49f61476ca1f3699700fa7ea3fe8